<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:backgroundTint="@color/orangeVeryLight"
    app:cardCornerRadius="16dp"
    app:cardElevation="0dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="56dp"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/step"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/create_record_step_third"
                android:textColor="#D4855B"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/smellRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/create_record_smell_rating"
                android:textColor="#D4855B"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/smellRatingBar"
                app:layout_constraintTop_toBottomOf="@+id/step" />

            <RatingBar
                android:id="@+id/smellRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="0.0"
                android:stepSize="1.0"
                android:theme="@style/CustomRatingBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/smellRating" />

            <TextView
                android:id="@+id/tasteRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/create_record_taste_rating"
                android:textColor="#D4855B"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/tasteRatingBar"
                app:layout_constraintTop_toBottomOf="@+id/smellRatingBar" />

            <RatingBar
                android:id="@+id/tasteRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="0.0"
                android:stepSize="1.0"
                android:theme="@style/CustomRatingBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tasteRating" />

            <TextView
                android:id="@+id/totalRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/create_record_total_rating"
                android:textColor="#D4855B"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/totalRatingBar"
                app:layout_constraintTop_toBottomOf="@+id/tasteRatingBar" />

            <RatingBar
                android:id="@+id/totalRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="0.0"
                android:stepSize="1.0"
                android:theme="@style/CustomRatingBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/totalRating" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/previousButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/rounded_button_background_secondary"
            android:gravity="center"
            android:text="@string/create_record_back_button_text"
            android:textAllCaps="false"
            android:textColor="@color/defaultBlack"
            android:textSize="16sp" />

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/rounded_button_background"
            android:gravity="center"
            android:text="@string/create_record_ready_button_text"
            android:textAllCaps="false"
            android:textColor="@color/defaultWhite"
            android:textSize="16sp" />

    </LinearLayout>


</androidx.cardview.widget.CardView>